fix: horizontal scroll of html

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@ body {
   color: #333333;
 }
 
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .container {
   width: 92%;
   max-width: 1110px;
