--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,6 +3,14 @@
 body
   font-family: 'Mulish', sans-serif
   color: $text-color
+html
+  width: 100%
+  max-width: 100%
+  overflow-x: hidden
+body
+  width: 100%
+  max-width: 100%
+  overflow-x: hidden
 .container
   width: 92%
   max-width: 1110px
